@@ -4,6 +4,7 @@ import fr.insee.eno.core.exceptions.business.DDIParsingException;
 import fr.insee.eno.core.mappers.DDIMapper;
 import fr.insee.eno.core.model.EnoQuestionnaire;
 import fr.insee.eno.core.model.question.SimpleMultipleChoiceQuestion;
+import fr.insee.eno.core.model.response.ModalityAttachment;
 import fr.insee.eno.core.serialize.DDIDeserializer;
 import org.junit.jupiter.api.Test;
 
@@ -14,7 +15,7 @@ import static org.junit.jupiter.api.Assertions.assertEquals;
 class SimpleMultipleChoiceQuestionTest {
 
     @Test
-    void mapQuestionnaireWithSimpleMCQ() throws DDIParsingException {
+    void mapSimpleMCQ() throws DDIParsingException {
         //
         EnoQuestionnaire enoQuestionnaire = new EnoQuestionnaire();
         DDIMapper ddiMapper = new DDIMapper();
@@ -28,9 +29,38 @@ class SimpleMultipleChoiceQuestionTest {
                 .map(SimpleMultipleChoiceQuestion.class::cast)
                 .toList();
         assertEquals(1, simpleMCQList.size());
-        SimpleMultipleChoiceQuestion simpleMCQ = simpleMCQList.get(0);
+        SimpleMultipleChoiceQuestion simpleMCQ = simpleMCQList.getFirst();
         assertEquals("MCQ_BOOL", simpleMCQ.getName());
         assertEquals(4, simpleMCQ.getCodeResponses().size());
+    }
+
+    @Test
+    void mapSimpleMCQ_withDetailResponses() throws DDIParsingException {
+        //
+        EnoQuestionnaire enoQuestionnaire = new EnoQuestionnaire();
+        DDIMapper ddiMapper = new DDIMapper();
+        ddiMapper.mapDDI(
+                DDIDeserializer.deserialize(this.getClass().getClassLoader().getResourceAsStream(
+                        "integration/ddi/ddi-other-specify.xml")),
+                enoQuestionnaire);
+        //
+        List<SimpleMultipleChoiceQuestion> simpleMCQList = enoQuestionnaire.getMultipleResponseQuestions().stream()
+                .filter(SimpleMultipleChoiceQuestion.class::isInstance)
+                .map(SimpleMultipleChoiceQuestion.class::cast)
+                .toList();
+        assertEquals(1, simpleMCQList.size());
+        SimpleMultipleChoiceQuestion simpleMCQ = simpleMCQList.getFirst();
+        assertEquals("MCQ", simpleMCQ.getName());
+        assertEquals("lutkfklf", simpleMCQ.getCodeListReference());
+        // After mapping: 4 proper modality code responses + 2 detail code responses (to be moved by a processing)
+        assertEquals(6, simpleMCQ.getCodeResponses().size());
+        //
+        assertEquals(6, simpleMCQ.getDdiBindings().size());
+        //
+        assertEquals(4, simpleMCQ.getModalityAttachments().stream()
+                .filter(ModalityAttachment.CodeAttachment.class::isInstance).count());
+        assertEquals(2, simpleMCQ.getModalityAttachments().stream()
+                .filter(ModalityAttachment.DetailAttachment.class::isInstance).count());
     }
 
 }
